--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "jquery": "^3.4.1",
     "mysql": "^2.17.1",
     "path": "^0.12.7"
   }
